2019-1/221/users/4106/executions/1847_2603.log
== TEST (2019-07-01 18:49:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]=N[j][i]
		v=sorted(v,reverse=True)
		for j in range(len(N)):
			N[j][i]=v[j]
print(N)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:49:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]=N[j][i]
		v=sorted(v,reverse=True)
		for j in range(len(N)):
			N[j][i]=v[j]
print(N)

-- EXECUTION TIME:
1.08344
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
Matriz: [[1 1 1 1]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
Matriz: [[4 1 1 3]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:49:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]=N[j][i]
		v=sorted(v,reverse=True)
		for j in range(len(N)):
			N[j][i]=v[j]
print(N)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:50:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]=N[j][i]
		v=sorted(v,reverse=True)
for j in range(len(N)):
			N[j][i]=v[j]
print(N)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:55:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]=N[j][i]
		v=sorted(v,reverse=True)
for j in range(len(N)):
	N[j][i]=v[j]
print(N)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:15:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
	v[j]=N[j][i]
	v=sorted(v,reverse=True)
for j in range(len(N)):
	N[j][i]=v[j]
print(N)

-- ERROR:
File "XXXX", line 7
    v[j]=N[j][i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:15:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
N= array(eval(input("Matriz: ")))
v= zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
	v[j]= N[j][i]
	v=sorted(v,reverse=True)
for j in range(len(N)):
	N[j][i]=v[j]
print(N)

-- ERROR:
File "XXXX", line 7
    v[j]= N[j][i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:19:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
N = array(eval(input("Matriz: ")))
v = zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]= N[j][i]
		v=sorted(v,reverse=True)
for j in range(len(N)):
	N[j][i]=v[j]
print(N)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:20:45) 
-- CODE:
from numpy import*
N = array(eval(input("Matriz: ")))
v = zeros((len(N)),dtype=int)
for i in range(len(N)):
	for j in range(len(N)):
		v[j]= N[j][i]
		v=sorted(v,reverse=True)
for j in range(len(N)):
	N[j][i]=v[j]
print(N)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:18:57) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[j] = M[j][i]
	v = sorted(v,reverse=True)
	for j in range(len(M)):
		 M[j][i] = v[j]
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:20:25) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[j] = M[j][i]
	v = sorted(v,reverse=True)
	for j in range(len(M)):
		 M[j][i] = v[j]
print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:22:44) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[j] = M[j][i]
	v = sorted(v,reverse=True)
	for j in range(len(M)):
		 M[j][i] = v[j]
print(M)


-- EXECUTION TIME:
0.962468
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
